# forgeee

./: .gitignore  CHANGELOG.md  PLANNING.md  TASK.md  TASKS.md  build.sh  install.sh  start.sh  stop.sh
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  conftest.py  fly.toml  pyproject.toml  requirements.txt
backend/scripts/: deploy.sh  test_connectivity.py
backend/src/: config.py  main.py
backend/src/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/auth/tests/: test_auth.py
backend/src/coaching/: language_stage.py  router.py  schemas.py  season_templates.py  service.py  templates.py  weekly_templates.py
backend/src/coaching/tests/: test_coaching.py
backend/src/common/: constants.py  rate_limit.py
backend/src/cycles/: photo_analyser.py  prompts.py  router.py  schemas.py  service.py
backend/src/cycles/tests/: test_cycles.py
backend/src/database/: connection.py  models.py
backend/src/database/migrations/: env.py
backend/src/gamification/: badges.py  challenges.py  router.py  schemas.py  service.py  xp.py
backend/src/gamification/tests/: test_gamification.py
backend/src/plans/: prompts.py  router.py  schemas.py  service.py  task_library.py
backend/src/progress/: router.py  schemas.py  score_calculator.py  service.py
backend/src/quiz/: estimator.py  router.py  schemas.py  service.py
backend/src/scheduler/: jobs.py  setup.py
backend/src/storage/: r2_client.py
backend/src/subscriptions/: router.py  schemas.py  service.py
backend/src/tasks/: router.py  schemas.py  service.py
docs/: README.md  design.md  (+8 more)
(+97 files in other folders)
